fixed error in the btn style that cause there to be a big gap between the selector and the button

--- a/Static/scss/components/general/general.css
+++ b/Static/scss/components/general/general.css
@@ -3,7 +3,7 @@ h1 {
 
 .btn {
   border: solid 1px grey;
-  margin-top: 154%;
+  margin-top: 15%;
   color: black; }
 
 .button {
